--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@
   --color-section-background2: #f5f4fa;
   --color-liane-card: #eeeeee;
   --hero-gradient: rgba(47, 48, 58, 0.4);
+  --color-icon: #afb1b8;
+  --color-icon-social: #AFB1B8;
+  --color-social-bgfooter: rgba(255, 255, 255, 0.1);
 }
 
 /* color: #2196f3; */
@@ -65,6 +68,10 @@ img {
   display: block;
   min-width: 100%;
   height: auto;
+}
+
+svg {
+  fill: currentColor;
 }
 
 address {
@@ -194,8 +201,14 @@ address {
   color: var(--title-text-color);
 }
 
+.contact-icon {
+  margin-right: 10px;
+}
+
 .contact-link:hover,
-.contact-link:focus {
+.contact-link:focus,
+.contact-icon:hover,
+.contact-icon:focus {
   color: var(--accent-color);
 }
 
@@ -235,6 +248,21 @@ address {
 .quality-list {
   display: flex;
   column-gap: 30px;
+}
+
+.quality-icon {
+  width: 100%;
+  height: 120px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  color: var(--title-text-color);
+  background: var(--color-section-background2);
+}
+
+.quality-icon:hover {
+  background: var(--accent-color);
 }
 
 .quality-title {
@@ -278,16 +306,17 @@ address {
   gap: 30px;
 }
 
+.team-content {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .team-item {
   flex-basis: calc((100% - 3*30)/4);
 
   background: var(--primary-whait-color);
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
     0 1px 3px 0 rgba(0, 0, 0, 0.12);
-}
-
-.team-img {
-  margin-bottom: 30px;
 }
 
 .team-title {
@@ -301,12 +330,68 @@ address {
 }
 
 .team-profession {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
   /* font-weight: 400; */
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0.03em;
   text-align: center;
+}
+
+.networks {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.networks-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--color-icon-social);
+}
+
+.networks-link:hover,
+.networks-link:focus {
+  color: var(--primary-whait-color);
+  background-color: var(--accent-color);
+}
+
+/* ---------------------clients---------- */
+
+.clients-title {
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  display: flex;
+  gap: 30px;
+
+}
+
+.clients-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /*
+   display: block;
+  padding: 16px 32px; */
+
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--color-icon);
+  border-radius: 4px;
+  color: var(--color-icon);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* -------------------------footer -------------------*/
@@ -316,13 +401,22 @@ address {
   background: var(--color-section-background);
 }
 
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-nav {
+  margin-right: 70px;
+}
+
 .footer-logo {
   margin-bottom: 20px;
 
   color: var(--primary-whait-color);
 }
 
-.address {
+.footer-address {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -343,9 +437,27 @@ address {
 }
 
 .address-contact {
-
   color: var(--color-with-transparency);
 }
+
+.social-title {
+  margin-bottom: 20px;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.footer .networks-link {
+  color: var(--primary-whait-color);
+  background-color: var(--color-social-bgfooter);
+}
+
+.footer .networks-link:hover,
+.footer .networks-link:focus {
+  background-color: var(--accent-color);
+}
+
 
 /* ---------------------portfolio------------------ */
 
@@ -376,8 +488,7 @@ address {
 .filter-btn:focus {
   background: var(--accent-color);
   color: var(--primary-whait-color);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
-    0 3px 1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
 }
 
 /* --------------portfolio project--------- */
@@ -390,6 +501,11 @@ address {
 
 .project-card {
   flex-basis: calc((100% - 2*30)/3);
+}
+
+.project-card:hover,
+.project-card:focus {
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 }
 
 .card-info {
